# LLM_ROBOT

./: CMakeLists.txt  README.md  combine.sh  data_generator.py  follow_target_example.py  generated_code.py  gripper_control.py  input.txt  instrutions.txt  part1.txt  part2.txt  pick_up_example.py  pick_up_example_backup.py  run.sh
base/: CMakeLists.txt  gripper_test.cpp  main.cpp  sine_control_demo.cpp
controllers/: pick_place.py  rmpflow.py
rmpflow/flexiv_rizon4_total/: flexiv_rizon4_total.usd
simulate_datasets/: No_offest_order.txt  calibration.txt  gripper_order.txt  offset_order.txt  order0.txt  order1.txt  readme.md
tasks/: follow_target.py  my_gripper.py  my_pick_place.py  pick_place.py
