cmake_minimum_required(VERSION 3.16.3)

find_package(flexiv_rdk REQUIRED)
# add_executable(demo ../test_control.cpp)
add_executable(sine sine_control_demo.cpp)
add_executable(test_every_joint test_every_joint.cpp)
add_executable(gripper gripper_test.cpp)
# target_link_libraries(demo flexiv::flexiv_rdk)
target_link_libraries(sine flexiv::flexiv_rdk)
target_link_libraries(test_every_joint flexiv::flexiv_rdk)
target_link_libraries(gripper flexiv::flexiv_rdk)
